--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -5,7 +5,8 @@ $color-text: #636060;
 $color-heading: #717171;
 $color-links-nav: #010201;
 $color-light: #ffff;
+$color-dark: #000000;
 
-$desctop-width: 1440px;
+$desctop-width: 1220px;
 $tablet-width: 768px;
 $mobile-width: 380px;
