--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,8 @@
 @import "./base/normalize";
 
 @import "./abstract/constants";
+@import "./abstract/mixins";
+@import "./abstract/placeholders";
 
 //base
 @import "./base/base";
@@ -9,6 +11,7 @@
 //components
 @import "./components/welcome";
 @import "./components/about";
+@import "./components/service";
 
 //layouts
 @import "./layouts/wrapper";
