--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,3 +1,17 @@
+.about {
+    padding: 93px 0 94px 0;
+}
 .about__wrapper {
     display: flex;
+}
+
+.about__body {
+    padding: 35px 153px 0 0;
+}
+
+.about__description {
+    color: $color-text;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
 }
