--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -6,6 +6,7 @@ $color-heading: #717171;
 $color-links-nav: #010201;
 $color-light: #ffff;
 $color-dark: #000000;
+$color-border: #E3E1D5;
 
 $desctop-width: 1220px;
 $tablet-width: 768px;
