--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -456,7 +456,6 @@ h4 {
   font-weight: 700;
   font-size: 20px;
   line-height: 22px;
-  color: #E06733;
 }
 
 h5 {
@@ -568,6 +567,10 @@ h5 {
   border: solid 1px #E3E1D5;
   border-radius: 20px;
   text-align: center;
+}
+
+.servise__title {
+  color: #E06733;
 }
 
 .card__subtitle {
