feat: add style for prices part

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -7,6 +7,8 @@ $color-links-nav: #010201;
 $color-light: #ffff;
 $color-dark: #000000;
 $color-border: #E3E1D5;
+$color-ico-closed: #D9D9D9;
+
 
 $desctop-width: 1220px;
 $tablet-width: 768px;
