--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "./components/welcome";
 @import "./components/about";
 @import "./components/service";
+@import "./components/prices";
 
 //layouts
 @import "./layouts/wrapper";
