--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-    @include font (normal, 700, 45px, 50px);
+    @include font (normal, 700, 4.5rem, 5rem);
     color: $color-heading;
     strong {
         color: $color-primary;
@@ -17,7 +17,7 @@ h1 {
 
 h2 {
     @extend %font-additional;
-    @include font (normal, 400, 40px, 52px);
+    @include font (normal, 400, 4rem, 5.2rem);
     color: $color-primary;
     strong {
         color: $color-additional;
@@ -26,14 +26,17 @@ h2 {
 }
 
 h3 {
-    @include font (normal, 700, 40px, 50px);
+    @include font (normal, 700, 4rem, 4.8rem);
+    strong {
+        color: $color-primary;
+    }
 }
 
 h4 {
-    @include font (normal, 700, 20px, 22px);
+    @include font (normal, 700, 2rem, 2.2rem);
 }
 
 h5 {
     @extend %font-additional;
-    @include font (normal, 700, 40px, 52px);
+    @include font (normal, 700, 4rem, 5.2rem);
 }
