feat: add style for about part

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import "./components/about";
 @import "./components/service";
 @import "./components/prices";
+@import "./components/contacts";
 
 //layouts
 @import "./layouts/wrapper";
