--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -1,3 +1,6 @@
+.prices {
+    padding: 40px 0 115px 0;
+}
 .prices__wrapper {
     display: flex;
     justify-content: space-between;
@@ -37,6 +40,7 @@
 
 .prices-contacts__button {
     text-align: right;
+    margin: 38px 0 39px 0;
 }
 
 .prices-contacts__img {
