--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -8,6 +8,7 @@ $color-light: #ffff;
 $color-dark: #000000;
 $color-border: #E3E1D5;
 $color-ico-closed: #D9D9D9;
+$color-drop-down: #D6E7D2;
 
 
 $desctop-width: 1220px;
