--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -6,6 +6,17 @@
     justify-content: space-between;
 }
 
+.prices__title {
+    @extend %font-primary;
+    @include font (normal, 700, 4rem, 5rem);
+    color: $color-dark;
+        strong {
+            @include font (normal, 700, 4rem, 5rem);
+            @extend %font-primary;
+            color: $color-primary;
+        }
+}
+
 .accordion {
     border: solid 1px $color-border;
     border-radius: 20px;
