--- a/src/sass/components/_welcome.scss
+++ b/src/sass/components/_welcome.scss
@@ -1,18 +1,22 @@
 .welcome {
     background-color: $color-background;
-    padding: 50px 0 75px 0;
+    padding: 50px 0 55px 0;
 }
 
 .welcome__wrapper {
     display: flex;
 }
 
+.welcome__img {
+    margin-top: 20px;
+}
+
 .welcome__body {
-    padding: 23px 0 0 224px;
+    padding: 20px 0 0 224px;
 }
 
 .welcome__description {
-    padding: 22px 0;
+    padding: 20px 0;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
