fix: resolve style for prices part

--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -17,6 +17,10 @@
         }
 }
 
+.prices__accordion {
+    margin-top: 25px;
+}
+
 .accordion {
     border: solid 1px $color-border;
     border-radius: 20px;
