--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,6 +8,10 @@ body {
     @extend %font-primary;
 }
 
+a {
+    text-decoration: none;
+}
+
 h1 {
     @include font (normal, 700, 4.5rem, 5rem);
     color: $color-heading;
