--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -2,8 +2,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 30px 0;
+}
+
+.footer__title {
+    color: $color-dark;
+    @include font(nomal, 400, 2rem, 5rem);
 }
 
 .social {
     display: flex;
+}
+
+.ico__social {
+    margin-left: 19px;
 }
