--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -422,6 +422,10 @@ body {
   font-size: 1.6rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   font-style: normal;
   font-weight: 700;
@@ -764,10 +768,23 @@ h5 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 30px 0;
+}
+
+.footer__title {
+  color: #000000;
+  font-style: nomal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 5rem;
 }
 
 .social {
   display: flex;
+}
+
+.ico__social {
+  margin-left: 19px;
 }
 
 /*# sourceMappingURL=style.css.map */
