--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -401,7 +401,7 @@ ul {
   box-sizing: border-box;
 }
 
-.navigation__item, .button {
+.navigation__link, .navigation__item, .button {
   transition: all 0.3s ease-out;
 }
 
@@ -759,8 +759,7 @@ h5 {
   line-height: 5rem;
   color: #010201;
 }
-
-.navigation__link_colored {
+.navigation__link:hover {
   color: #E06733;
 }
 
