--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1,789 +1,17 @@
-/* ==========================================================================
-   Normalize.scss settings
-   ========================================================================== */
-/**
- * Includes legacy browser support IE6/7
- *
- * Set to false if you want to drop support for IE6 and IE7
- */
-/* Base
-   ========================================================================== */
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS and IE text size adjust after device orientation change,
- *    without disabling user zoom.
- * 3. Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
- *  `em` units.
- */
-html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
+/* Error: Can't find stylesheet to import.
+ *    ,
+ * 10 | @import "./base/svg";
+ *    |         ^^^^^^^^^^^^
+ *    '
+ *   src\sass\style.scss 10:9  root stylesheet */
 
-/**
- * Remove default margin.
- */
-body {
-  margin: 0;
-}
-
-/* HTML5 display definitions
-   ========================================================================== */
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a    \2577 \a 10 \2502  @import \"./base/svg\";\d\a    \2502          ^^^^^^^^^^^^\a    \2575 \a   src\\sass\\style.scss 10:9  root stylesheet";
 }
-
-/**
- * 1. Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Prevents modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
- */
-[hidden],
-template {
-  display: none;
-}
-
-/* Links
-   ========================================================================== */
-/**
- * Remove the gray background color from active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * Improve readability of focused elements when they are also in an
- * active/hover state.
- */
-a:active, a:hover {
-  outline: 0;
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
- */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
- */
-b,
-strong {
-  font-weight: bold;
-}
-
-/**
- * Address styling not present in Safari and Chrome.
- */
-dfn {
-  font-style: italic;
-}
-
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/**
- * Addresses styling not present in IE 8/9.
- */
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * 1. Remove border when inside `a` element in IE 8/9/10.
- * 2. Improves image quality when scaled in IE 7.
- */
-img {
-  border: 0;
-}
-
-/**
- * Correct overflow not hidden in IE 9/10/11.
- */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * Address margin not present in IE 8/9 and Safari.
- */
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * Address differences between Firefox and other browsers.
- */
-hr {
-  box-sizing: content-box;
-  height: 0;
-}
-
-/**
- * Contain overflow in all browsers.
- */
-pre {
-  overflow: auto;
-}
-
-/**
- * Address odd `em`-unit font size rendering in all browsers.
- * Correct font family set oddly in IE 6, Safari 4/5, and Chrome.
- */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
- */
-/**
- * 1. Correct color not being inherited.
- *  Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- * 4. Improves appearance and consistency in all browsers.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit; /* 1 */
-  font: inherit; /* 2 */
-  margin: 0; /* 3 */
-}
-
-/**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
- */
-button {
-  overflow: visible;
-}
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
- * Correct `select` style inheritance in Firefox.
- */
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *  and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *  `input` and others.
- * 4. Removes inner spacing in IE 7 without affecting normal text inputs.
- *  Known issue: inner spacing remains in IE 6.
- */
-button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
-}
-
-/**
- * Re-set default cursor for disabled elements.
- */
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-input {
-  line-height: normal;
-}
-
-/**
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
- *  Known issue: excess padding remains in IE 6.
- */
-input[type=checkbox],
-input[type=radio] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
- * decrement button to change from `default` to `text`.
- */
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
- */
-input[type=search] {
-  -webkit-appearance: textfield; /* 1 */
-  box-sizing: content-box; /* 2 */
-}
-
-/**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
- */
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Define consistent border, margin, and padding.
- */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- * 3. Corrects text not wrapping in Firefox 3.
- * 4. Corrects alignment displayed oddly in IE 6/7.
- */
-legend {
-  border: 0; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Remove default vertical scrollbar in IE 8/9/10/11.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * Don't inherit the `font-weight` (applied by a rule above).
- * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
- */
-optgroup {
-  font-weight: bold;
-}
-
-/* Tables
-   ========================================================================== */
-/**
- * Remove most spacing between table cells.
- */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td,
-th {
-  padding: 0;
-}
-
-ul {
-  padding-left: 0;
-  list-style: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.navigation__link, .navigation__item, .button {
-  transition: all 0.3s ease-out;
-}
-
-.prices__title strong, .prices__title, body {
-  font-family: "Inter", Verdana, sans-serif;
-}
-
-.button_colored, h5, h2 {
-  font-family: "Inika", Verdana, sans-serif;
-}
-
-html {
-  font-size: 10px;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-size: 1.6rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 4.5rem;
-  line-height: 5rem;
-  color: #717171;
-}
-h1 strong {
-  color: #499A18;
-}
-
-h2 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 4rem;
-  line-height: 5.2rem;
-  color: #499A18;
-}
-h2 strong {
-  color: #E06733;
-  font-weight: 400;
-}
-
-h4 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 2rem;
-  line-height: 2.2rem;
-  margin: 5px 0 10px 0;
-  color: #E06733;
-}
-
-h5 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 4rem;
-  line-height: 5.2rem;
-}
-
-.button {
-  padding: 11px 27px;
-  font-style: nomal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 2rem;
-  background-color: #EDF2EC;
-}
-.button_uppercase {
-  text-transform: uppercase;
-  border: solid 2px #E06733;
-  border-radius: 10px;
-  color: #000000;
-}
-.button_uppercase:hover {
-  background-color: #E06733;
-  color: white;
-}
-.button_colored {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 2rem;
-  line-height: 2.6rem;
-  color: #E06733;
-  width: 161px;
-  border: solid 1px #E06733;
-  border-radius: 5px;
-}
-.button_colored_bg-none {
-  background-color: white;
-}
-.button_colored:hover {
-  background-color: #E06733;
-  color: white;
-}
-
-.welcome {
-  background-color: #EDF2EC;
-  padding: 50px 0 55px 0;
-}
-
-.welcome__wrapper {
-  display: flex;
-}
-
-.welcome__img {
-  margin-top: 20px;
-}
-
-.welcome__body {
-  padding: 20px 0 0 224px;
-}
-
-.welcome__description {
-  padding: 20px 0;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 35px;
-  color: #636060;
-}
-
-.about {
-  padding: 93px 0 94px 0;
-}
-
-.about__wrapper {
-  display: flex;
-}
-
-.about__body {
-  padding: 35px 153px 0 0;
-}
-
-.about__description {
-  color: #636060;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.service {
-  background-color: #EDF2EC;
-  padding: 0 0 133px 0;
-}
-
-.service__wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr repeat(2, 3fr);
-  grid-template-areas: "t b b " "c1 c2 c3" "c4 c5 c6";
-  column-gap: 116px;
-}
-
-.servise__title {
-  grid-area: t;
-  margin-bottom: 22px;
-  padding-top: 7px;
-  color: #499A18;
-}
-
-.service__buttons {
-  grid-area: b;
-  margin: auto 0;
-}
-
-.service__buttons > * {
-  margin-right: 35px;
-}
-.service__buttons > *:last-child {
-  margin-right: 0;
-}
-
-.card {
-  border: solid 1px #E3E1D5;
-  border-radius: 20px;
-  text-align: center;
-  margin-top: 55px;
-}
-
-.card__subtitle {
-  font-style: nomal;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 2rem;
-  color: #717171;
-}
-
-.card-1 {
-  grid-area: c1;
-}
-
-.card-2 {
-  grid-area: c2;
-}
-
-.card-3 {
-  grid-area: c3;
-}
-
-.card-4 {
-  grid-area: c4;
-}
-
-.card-5 {
-  grid-area: c5;
-}
-
-.card-6 {
-  grid-area: c6;
-}
-
-.prices {
-  padding: 5px 0 115px 0;
-}
-
-.prices__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.prices__title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 4rem;
-  line-height: 5rem;
-  color: #000000;
-}
-.prices__title strong {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 4rem;
-  line-height: 5rem;
-  color: #499A18;
-}
-
-.prices__accordion {
-  margin-top: 25px;
-}
-
-.accordion {
-  border: solid 1px #E3E1D5;
-  border-radius: 20px;
-}
-
-.accordion__label {
-  background-color: #EDF2EC;
-  border-radius: 20px;
-  margin: 34px 41px;
-}
-
-.accordion__title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 2rem;
-  line-height: 2.2rem;
-  display: inline-block;
-  padding: 14px 40px;
-  width: 194px;
-}
-
-.accordion_img {
-  margin-right: 40px;
-}
-
-.accordion__content {
-  display: none;
-}
-
-.prices-contacts__title {
-  max-width: 452px;
-  text-align: right;
-}
-
-.prices-contacts__button {
-  text-align: right;
-  margin: 38px 0 39px 0;
-}
-
-.prices-contacts__img {
-  text-align: right;
-}
-
-.contacts {
-  background-color: #EDF2EC;
-  padding-top: 53px;
-}
-
-.contacts__wrapper {
-  display: flex;
-}
-
-.contacts__title {
-  font-weight: 700;
-  color: #499A18;
-  margin: 5px 64px 0 113px;
-}
-
-.drop__label {
-  background-color: #D6E7D2;
-  margin-top: 92px;
-}
-
-.drop__title {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 2rem;
-  line-height: 4rem;
-  color: #636060;
-  display: inline-block;
-  padding: 5px 226px 5px 20px;
-  width: 384px;
-}
-
-.drop_img {
-  margin-right: 50px;
-}
-
-.wrapper {
-  max-width: 1220px;
-  margin: auto;
-}
-
-.header {
-  background-color: #EDF2EC;
-  padding: 26px 0;
-}
-
-.header__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 452px;
-}
-
-.navigation__item {
-  list-style: none;
-}
-
-.navigation__link {
-  text-decoration: none;
-  font-family: "Inika";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 5rem;
-  color: #010201;
-}
-.navigation__link:hover {
-  color: #E06733;
-}
-
-.footer__wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 0;
-}
-
-.footer__title {
-  color: #000000;
-  font-style: nomal;
-  font-weight: 400;
-  font-size: 2rem;
-  line-height: 5rem;
-}
-
-.social {
-  display: flex;
-}
-
-.ico__social {
-  margin-left: 19px;
-}
-
-/*# sourceMappingURL=style.css.map */
