--- a/src/sass/layouts/_wrapper.scss
+++ b/src/sass/layouts/_wrapper.scss
@@ -1,4 +1,7 @@
 .wrapper {
-    max-width: $desctop-width;
+    max-width: calc($desctop-width - 220px);
     margin: auto;
+    @include media-tablet {
+        padding: 0 50px;
+    }
 }
