--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -4,3 +4,15 @@
     font-size: $size;
     line-height: $height;
 }
+
+@mixin media-desctop {
+    @media (max-width: $desctop-width) {@content; }
+}
+
+@mixin media-tablet {
+    @media (max-width: $tablet-width) {@content; }
+}
+
+@mixin media-mobile {
+    @media (max-width: $mobile-width) {@content; }
+}
