--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 //base
 @import "./base/base";
 @import "./base/buttons";
+@import "./base/hamburger";
 
 //components
 @import "./components/welcome";
