--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -3,6 +3,10 @@
 }
 .about__wrapper {
     display: flex;
+    flex-direction: row-reverse;
+    @include media-tablet {
+        flex-direction: row-reverse;
+    }   
 }
 
 .about__body {
