--- a/src/sass/components/_welcome.scss
+++ b/src/sass/components/_welcome.scss
@@ -1,25 +1,64 @@
 .welcome {
     background-color: $color-background;
     padding: 50px 0 55px 0;
+    @include media-tablet {
+        padding: 40px 0 70px 0;
+    }
+    @include media-mobile {
+        padding: 24px 0;
+    }
 }
 
 .welcome__wrapper {
     display: flex;
+    @include media-tablet {
+        flex-direction: row-reverse;
+    }
 }
 
 .welcome__img {
     margin-top: 20px;
+    @include media-tablet {
+        width: 280px;
+        height: 254px;
+    }
+    @include media-mobile {
+        display: none;
+    }
 }
 
 .welcome__body {
     padding: 20px 0 0 224px;
+    @include media-tablet {
+        padding: 0 42px 0 0;
+    }
+    @include media-mobile {
+        padding: 0;
+    }
+}
+
+.welcome__title {
+    @include media-tablet {
+        font-size: 3.5rem;
+        margin: 0;
+    }
+    @include media-mobile {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+    }
 }
 
 .welcome__description {
     padding: 20px 0;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 35px;
+    @include font (normal, 400, 2rem, 3.5rem);
     color: $color-text;
+    @include media-tablet {
+        font-size: 1.6rem;
+        line-height: 2.5rem;
+        margin: 0;
+        padding: 30px 0;
+    }
+    @include media-mobile {
+        padding: 20px 0;
+    }
 }
