feat: add adaptive for about sections

--- a/src/sass/components/_welcome.scss
+++ b/src/sass/components/_welcome.scss
@@ -21,6 +21,7 @@
     @include media-tablet {
         width: 280px;
         height: 254px;
+        margin: 0;
     }
     @include media-mobile {
         display: none;
