--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -570,6 +570,7 @@ h5 {
   .welcome__img {
     width: 280px;
     height: 254px;
+    margin: 0;
   }
 }
 @media (max-width: 380px) {
@@ -630,26 +631,81 @@ h5 {
 .about {
   padding: 93px 0 94px 0;
 }
+@media (max-width: 768px) {
+  .about {
+    padding: 40px 0 95px 0;
+  }
+}
+@media (max-width: 380px) {
+  .about {
+    padding: 30px 0 31px 0;
+  }
+}
 
 .about__wrapper {
   display: flex;
-  flex-direction: row-reverse;
 }
 @media (max-width: 768px) {
   .about__wrapper {
-    flex-direction: row-reverse;
+    display: block;
+    text-align: center;
   }
 }
 
 .about__body {
   padding: 35px 153px 0 0;
 }
+@media (max-width: 768px) {
+  .about__body {
+    padding: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .about__title {
+    font-size: 3.5rem;
+    line-height: 4.6rem;
+    margin: 0;
+  }
+}
+@media (max-width: 380px) {
+  .about__title {
+    font-size: 2.5rem;
+    line-height: 3.3rem;
+  }
+}
 
 .about__description {
-  color: #636060;
+  font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 2rem;
+  line-height: 3rem;
+}
+@media (max-width: 768px) {
+  .about__description {
+    margin: 0;
+    padding: 40px 0;
+  }
+}
+@media (max-width: 380px) {
+  .about__description {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    padding: 22px 0 0 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .about__img {
+    width: 250px;
+    height: 258px;
+  }
+}
+@media (max-width: 380px) {
+  .about__img {
+    width: 150px;
+    height: 147px;
+  }
 }
 
 .service {
