--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -1,9 +1,20 @@
 .prices {
     padding: 5px 0 115px 0;
+    @include media-tablet {
+        padding: 40px 0 88px 0;
+    }
+    @include media-mobile {
+        padding: 25px 0 40px 0;
+    }
 }
 .prices__wrapper {
     display: flex;
     justify-content: space-between;
+    @include media-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .prices__title {
@@ -14,23 +25,55 @@
             @include font (normal, 700, 4rem, 5rem);
             @extend %font-primary;
             color: $color-primary;
+            @include media-tablet {
+                font-size: 2.5rem;
+                line-height: 3.5rem;
+            }
         }
+    @include media-tablet {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+    }
+    @include media-mobile {
+        text-align: center;
+        margin: 0 0 40px 0;
+    }
 }
 
 .prices__accordion {
     margin-top: 25px;
+    text-align: center;
+    @include media-mobile {
+        margin: 0 0 19px 0;
+    }
 }
 
 .accordion {
     border: solid 1px $color-border;
     border-radius: 20px;
-    
+    @include media-mobile {
+        width: 224px;
+        height: 235px;
+        padding: 29px 22px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between; 
+    }
 }
 
 .accordion__label {
     background-color: $color-background;
     border-radius: 20px;
     margin: 34px 41px;
+    width: 250px;
+    height: 50px;
+    @include media-mobile {
+        width: 180px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
 }
 
 .accordion__title {
@@ -38,10 +81,22 @@
     display: inline-block;
     padding: 14px 40px; 
     width: 194px;
+    @include media-tablet {
+        padding: auto 40px;
+    }
+    @include media-mobile {
+        font-size: 1.5rem;
+        line-height: 2rem;
+        width: 60%;
+        padding: 16px 5px 16px 30px;
+    }
 }
 
 .accordion_img {
-    margin-right: 40px;
+    display: inline-block;
+    @include background ($width: 16px, $height: 16px);
+    background-image: url(/src/img/icons/accordion_btn_closed.svg);
+    margin-right: 30px;
 }
 
 .accordion__content {
@@ -51,13 +106,26 @@
 .prices-contacts__title {
     max-width: 452px;
     text-align: right;
+    @include media-mobile {
+        text-align: center;
+        margin: 0 0 14px 0;
+    }
 }
 
 .prices-contacts__button {
     text-align: right;
     margin: 38px 0 39px 0;
+    @include media-tablet {
+        margin: 22px 0 34px 0;
+    }
+    @include media-mobile {
+        text-align: center;
+    }
 }
 
 .prices-contacts__img {
     text-align: right;
+    @include media-mobile {
+       display: none;
+    }
 }
