--- a/src/sass/components/_service.scss
+++ b/src/sass/components/_service.scss
@@ -1,13 +1,3 @@
-@mixin card-background ($repeat: no-repeat, $cover: cover, $position: center, $radius: 20px, $height: 350px, $width: 329px) {
-    background-repeat: $repeat;
-    background-size: $cover;
-    background-position: $position;
-    border-top-left-radius: $radius;
-    border-top-right-radius: $radius;
-    height: $height;
-    width: $width;
-}
-
 .service {
     background-color: $color-background;
     padding: 0 0 133px 0;
@@ -125,60 +115,60 @@
 }
 
 .card-image-1 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-1.png');
 
     @include media-tablet {
-        @include card-background($width: 280px);
+        @include background($width: 280px);
         background-image: url('/src/img/service-tablet/card-image-1.jpg');
     }
 }
 
 .card-image-2 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-2.png');
 
     @include media-tablet {
-        @include card-background($width: 280px);
+        @include background($width: 280px);
         background-image: url('/src/img/service-tablet/card-image-2.jpg');
     }
 }
 
 .card-image-3 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-3.png');
 
     @include media-tablet {
-        @include card-background($width: 280px);
+        @include background($width: 280px);
         background-image: url('/src/img/service-tablet/card-image-3.jpg');
     }
 }
 
 .card-image-4 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-4.png');
 
     @include media-tablet {
-        @include card-background($width: 280px);
+        @include background($width: 280px);
         background-image: url('/src/img/service-tablet/card-image-4.jpg');
     }
 }
 
 .card-image-5 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-5.png');
 
     @include media-tablet {
-        @include card-background($width: 280px);
+        @include background($width: 280px);
         background-image: url('/src/img/service-tablet/card-image-5.jpg');
     }
 }
 
 .card-image-6 {
-    @include card-background;
+    @include background;
     background-image: url('/src/img/service/card-image-6.png');
     @include media-tablet {
-        @include card-background($width:280px);
+        @include background($width:280px);
         background-image: url('/src/img/service-tablet/card-image-6.jpg');
     }
 }
