--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -507,6 +507,15 @@ h5 {
   background-color: #E06733;
   color: white;
 }
+@media (max-width: 380px) {
+  .button_colored {
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    width: 121px;
+    padding: 8px 0;
+  }
+}
 
 .hamburger__line2, .hamburger__line1, .hamburger:after, .hamburger:before {
   content: "";
@@ -1006,10 +1015,27 @@ h5 {
 .prices {
   padding: 5px 0 115px 0;
 }
+@media (max-width: 768px) {
+  .prices {
+    padding: 40px 0 88px 0;
+  }
+}
+@media (max-width: 380px) {
+  .prices {
+    padding: 25px 0 40px 0;
+  }
+}
 
 .prices__wrapper {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 380px) {
+  .prices__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .prices__title {
@@ -1026,20 +1052,65 @@ h5 {
   line-height: 5rem;
   color: #499A18;
 }
+@media (max-width: 768px) {
+  .prices__title strong {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+  }
+}
+@media (max-width: 768px) {
+  .prices__title {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+  }
+}
+@media (max-width: 380px) {
+  .prices__title {
+    text-align: center;
+    margin: 0 0 40px 0;
+  }
+}
 
 .prices__accordion {
   margin-top: 25px;
+  text-align: center;
+}
+@media (max-width: 380px) {
+  .prices__accordion {
+    margin: 0 0 19px 0;
+  }
 }
 
 .accordion {
   border: solid 1px #E3E1D5;
   border-radius: 20px;
 }
+@media (max-width: 380px) {
+  .accordion {
+    width: 224px;
+    height: 235px;
+    padding: 29px 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
 
 .accordion__label {
   background-color: #EDF2EC;
   border-radius: 20px;
   margin: 34px 41px;
+  width: 250px;
+  height: 50px;
+}
+@media (max-width: 380px) {
+  .accordion__label {
+    width: 180px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
 .accordion__title {
@@ -1051,9 +1122,31 @@ h5 {
   padding: 14px 40px;
   width: 194px;
 }
+@media (max-width: 768px) {
+  .accordion__title {
+    padding: auto 40px;
+  }
+}
+@media (max-width: 380px) {
+  .accordion__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    width: 60%;
+    padding: 16px 5px 16px 30px;
+  }
+}
 
 .accordion_img {
-  margin-right: 40px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  height: 16px;
+  width: 16px;
+  background-image: url(/src/img/icons/accordion_btn_closed.svg);
+  margin-right: 30px;
 }
 
 .accordion__content {
@@ -1064,14 +1157,35 @@ h5 {
   max-width: 452px;
   text-align: right;
 }
+@media (max-width: 380px) {
+  .prices-contacts__title {
+    text-align: center;
+    margin: 0 0 14px 0;
+  }
+}
 
 .prices-contacts__button {
   text-align: right;
   margin: 38px 0 39px 0;
 }
+@media (max-width: 768px) {
+  .prices-contacts__button {
+    margin: 22px 0 34px 0;
+  }
+}
+@media (max-width: 380px) {
+  .prices-contacts__button {
+    text-align: center;
+  }
+}
 
 .prices-contacts__img {
   text-align: right;
+}
+@media (max-width: 380px) {
+  .prices-contacts__img {
+    display: none;
+  }
 }
 
 .contacts {
