--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1192,9 +1192,33 @@ h5 {
   background-color: #EDF2EC;
   padding-top: 53px;
 }
+@media (max-width: 768px) {
+  .contacts {
+    padding-top: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .contacts {
+    padding-top: 25px;
+  }
+}
 
 .contacts__wrapper {
   display: flex;
+}
+@media (max-width: 768px) {
+  .contacts__wrapper {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .contacts_img {
+    width: 200px;
+    height: 248px;
+    order: 1;
+  }
 }
 
 .contacts__title {
@@ -1202,10 +1226,40 @@ h5 {
   color: #499A18;
   margin: 5px 64px 0 113px;
 }
+@media (max-width: 768px) {
+  .contacts__title {
+    order: 3;
+    margin: 0 0 100px 0;
+  }
+}
+@media (max-width: 380px) {
+  .contacts__title {
+    font-size: 25px;
+    line-height: 33px;
+    margin: 0 0 80px 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .drop-down {
+    order: 2;
+    padding-bottom: 250px;
+  }
+}
+@media (max-width: 380px) {
+  .drop-down {
+    padding-bottom: 132px;
+  }
+}
 
 .drop__label {
   background-color: #D6E7D2;
   margin-top: 92px;
+}
+@media (max-width: 768px) {
+  .drop__label {
+    margin: 0;
+  }
 }
 
 .drop__title {
@@ -1217,6 +1271,12 @@ h5 {
   display: inline-block;
   padding: 5px 226px 5px 20px;
   width: 384px;
+}
+@media (max-width: 380px) {
+  .drop__title {
+    padding: 5px 76px 5px 20px;
+    width: 234px;
+  }
 }
 
 .drop_img {
